// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test users query should find a user by handle 1`] = `
Object {
  "data": Object {
    "findUser": Object {
      "ClientErrorUnknown": null,
      "ClientErrorUserNotFound": null,
      "Users": Array [
        Object {
          "handle": "user1",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should not find a user by handle and throw an error 1`] = `
Object {
  "data": Object {
    "findUser": Object {
      "ClientErrorUnknown": null,
      "ClientErrorUserNotFound": Object {
        "message": "Couldn't find user with handle hgyujghf8989y89",
      },
      "Users": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should query a user by publicKey 1`] = `
Object {
  "data": Object {
    "findUser": Object {
      "ClientErrorUnknown": null,
      "ClientErrorUserNotFound": null,
      "Users": Array [
        Object {
          "handle": "user1",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should query the all the users 1`] = `
Object {
  "data": Object {
    "listCreators": Object {
      "ClientErrorUnknown": null,
      "ClientErrorUserNotFound": null,
      "Users": Array [
        Object {
          "handle": "user2",
        },
        Object {
          "handle": "user1",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
